Attempted to fix Sashank not showing up on phone

--- a/Sashank.css
+++ b/Sashank.css
@@ -3,7 +3,6 @@ body {
   background-image: linear-gradient(to right, #64a47c, #eaf3ee);
   margin: 0;
   padding: 0;
-  padding-bottom: 50px;
 }
 
 ul.main {
